# result

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: doxygen.cmake  ep_catch2.cmake  result-config.cmake.in  superbuild.cmake
examples/: CMakeLists.txt
examples/src/: example_01.cpp
include/result/: result.hpp
result/: CMakeLists.txt  LICENSE  README.md
result/cmake/: result-config.cmake.in
result/include/result/: result.hpp
result/tests/: CMakeLists.txt
result/tests/src/: result.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  result.cpp
